--- a/src/NLP_Project2_IA.ipynb
+++ b/src/NLP_Project2_IA.ipynb
@@ -13,35 +13,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importing the Dataset\n",
+    "## Importing the Dataset\n",
     "\n",
-    "TODO - describe dataset and the import process"
+    "We are importing our data from the res directory where the Emotions.csv and Testingdata.csv are located.\n",
+    "\n",
+    "They are a collection of frases similar to \"tweets\" and have been classified according to their associated emotion (\"joy\", \"fear\" or \"anger\")."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_set_path = \"../res/Emotions.csv\"\n",
-    "testing_set_path = \"../res/Testingdata.csv\"\n",
-    "dataset = pd.read_csv(data_set_path, header=0, sep=\",\", names=[\"Statement\", \"Emotion\"], encoding='cp1252')\n",
-    "testset = pd.read_csv(testing_set_path, header=0, sep=\",\", names=[\"Statement\", \"Emotion\"], encoding='cp1252')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -108,18 +89,37 @@
        "4  Don't join they put the phone down on you, tal...   anger"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "import pandas as pd\n",
+    "data_set_path = \"../res/Emotions.csv\"\n",
+    "testing_set_path = \"../res/Testingdata.csv\"\n",
+    "dataset = pd.read_csv(data_set_path, header=0, sep=\",\", names=[\"Statement\", \"Emotion\"], encoding='cp1252')\n",
+    "testset = pd.read_csv(testing_set_path, header=0, sep=\",\", names=[\"Statement\", \"Emotion\"], encoding='cp1252')\n",
     "dataset.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you executed the last code block the program should show the first entries of the training dataset that we get from importing Emotions.csv.\n",
+    "\n",
+    "The following line of code displays some details obout the dataset we just imported."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "freq                                                   26    1147"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,19 +193,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing\n",
+    "# Preprocessing\n",
     "\n",
-    "To solve this NLP problem we will employ some stages of preprocessing on our data, namely \"Steaming and Tokenization\" and \"Lemmatization\".\n",
-    "We then choose between two major preprocessing algorithms that we expected may give different results: \"Bag of Words\" and TF-IDF\"\n"
+    "To solve this NLP problem we will employ some stages of preprocessing on our data, namely Steaming and Tokenization.\n",
+    "We then choose between two major preprocessing algorithms that we expected may give different results: BoW (Bag of Words) and TF-IDF (Term Frequency - Inverse Document Frequency)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Steaming and Tokenization\n",
+    "### Steaming and Tokenization\n",
     "\n",
-    "TODO - describe steaming process"
+    "In order ease the amount of processing the program must do we can apply some transformations to the text such as removing punctuation and other symbols, turn it all to lowercase, separating the text into tokens (separate by words), and removing stopwords (such as \"the\", \"a\", etc.)."
    ]
   },
   {
@@ -229,6 +229,13 @@
     "    review = ' '.join([ps.stem(w) for w in review.split() if not w in set(stopwords.words('english'))])\n",
     "    corpus.append(review)\n",
     "# print(corpus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code shows us a visual representation of the frequency in which each word present in the dataset appears."
    ]
   },
   {
@@ -264,14 +271,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The generated graph shows us the most predominant words in our dataset as bigger than the rest."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Two different approaches\n",
+    "\n",
+    "Next we have implemented two different ways in which the rest of the preprocessing can be achieved __BoW__ and __TF-IDF__.\n",
+    "In order to test both approaches we ask you that you run the code blocks of either one or the other chapter and jump to the algorithm section.\n",
+    "You can come back latter and try the other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Bag of Words\n",
     "\n",
-    "TODO - describe bag of words"
+    "The BoW algorithm starts by creating a matrix with a slot for every word in the dataset. It then counts, for each sentece, how many of those words it has. This allows it to compare how close 2 sentences are by how similar their matrix representations are."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +322,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(vectorizer.get_feature_names())"
+    "# print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following piece of code gives us a peak into that matrix representation. Since the matrix is constructed for every word in the dataset most of the cells are at 0."
    ]
   },
   {
@@ -513,38 +545,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF\n",
+    "\n",
+    "This algorithm calculates 2 terms:\n",
+    "\n",
+    " - TF - that is the frequency in which a word appears in a document (a tweet in our case)\n",
+    " - IDF - logarithm of the inverse of the frequency in which the word appears in the whole corpus (the collection of all documents)\n",
+    " By multiplying these two terms you get the TF-IDF that gets you a value of the frequency of each word in different sentences but corrects for their overall frequency so that words like \"that\", \"of\" and such are not overrepresented."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2827, 5434) (2827,)\n"
+      "(2827, 7035)\n"
      ]
     }
    ],
-   "source": [
-    "y = dataset['Emotion']\n",
-    "\n",
-    "print(X.shape, y.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TF-IDF\n",
-    "\n",
-    "TODO - describe tf-idf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "from sklearn.feature_extraction.text import TfidfTransformer, TfidfVectorizer\n",
@@ -555,48 +580,43 @@
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train = tfidf_transformer.fit_transform(X)\n",
     "print(X_train)\n",
-    "'''\n",
-    "tfIdfTransformer = TfidfTransformer(use_idf=True)\n",
+    "''IdfTransformer = TfidfTransformer(use_idf=True)\n",
     "countVectorizer = CountVectorizer()\n",
     "wordCount = countVectorizer.fit_transform(dataset['Statement'])\n",
-    "X = tfIdfTransformer.fit_transform(wordCount)"
+    "X = tfIdfTransformer.fit_transform(wordCount)\n",
+    "''' \n",
+    "tfVectorizer = CountVectorizer()\n",
+    "X = tfVectorizer.fit_transform(dataset['Statement'])\n",
+    "print(X.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training Classifier"
+    "# Algorithms\n",
+    "\n",
+    "Now that we have a workable dataset we can experiment with some different algorithms to help us classify what type of emotion is associated with our test data.\n",
+    "First lets separate our dataset into training and validation sets so that we can train our models. Latter we will try it against the test dataset and compare results.\n",
+    "\n",
+    "To do that start by running the code under __Dataset Distribution__ and similar to how we did in the __Preprocessing__ section run only the code blocks of an algorithm section at a time before going to __Performance Testing__.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset Distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2261, 7035) (2261,)\n",
-      "(566, 7035) (566,)\n",
-      "\n",
-      "Label distribution in the training set:\n",
-      "fear     912\n",
-      "anger    686\n",
-      "joy      663\n",
-      "Name: Emotion, dtype: int64\n",
-      "\n",
-      "Label distribution in the test set:\n",
-      "fear     235\n",
-      "anger    171\n",
-      "joy      160\n",
-      "Name: Emotion, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "y = dataset['Emotion']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20)\n",
     "\n",
@@ -614,29 +634,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algorithms\n",
-    "\n",
-    "TODO - briefly describe overall algorithms\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import f1_score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Naïve Bayes\n",
     "\n",
     "TODO - describe bayes algorithm"
@@ -644,20 +641,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 58  65  48]\n",
-      " [ 73 112  50]\n",
-      " [ 37  77  46]]\n",
-      "Precision :  [0.3452381  0.44094488 0.31944444]\n",
-      "Recall Score :  [0.33918129 0.47659574 0.2875    ]\n",
-      "Accuracy Score :  0.38162544169611307\n",
-      "F1 Score :  [0.34218289 0.45807771 0.30263158]\n"
+      "[[151  13   6]\n",
+      " [ 18 210  11]\n",
+      " [  9  18 130]]\n",
+      "Precision :  [0.84831461 0.87136929 0.88435374]\n",
+      "Recall Score :  [0.88823529 0.87866109 0.82802548]\n",
+      "Accuracy Score :  0.8674911660777385\n",
+      "F1 Score :  [0.86781609 0.875      0.85526316]\n"
      ]
     }
    ],
@@ -672,7 +669,7 @@
     "clf.fit(X_train, y_train)\n",
     "\n",
     "# Predict the response for test dataset\n",
-    "predicted = clf.predict(X_train)\n",
+    "y_pred = clf.predict(X_test)\n",
     "print(confusion_matrix(y_test, y_pred))\n",
     "\n",
     "# accuracy, precision, recall, f1\n",
@@ -693,20 +690,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[152  16   3]\n",
-      " [  7 223   5]\n",
-      " [  4  23 133]]\n",
-      "Precision :  [0.93251534 0.85114504 0.94326241]\n",
-      "Recall Score :  [0.88888889 0.94893617 0.83125   ]\n",
-      "Accuracy Score :  0.8975265017667845\n",
-      "F1 Score :  [0.91017964 0.89738431 0.88372093]\n"
+      "[[145  18   7]\n",
+      " [ 17 220   2]\n",
+      " [  9  14 134]]\n",
+      "Precision :  [0.84795322 0.87301587 0.93706294]\n",
+      "Recall Score :  [0.85294118 0.92050209 0.85350318]\n",
+      "Accuracy Score :  0.8816254416961131\n",
+      "F1 Score :  [0.85043988 0.89613035 0.89333333]\n"
      ]
     }
    ],
@@ -715,7 +712,7 @@
     "from sklearn import svm\n",
     "\n",
     "# Create a svm Classifier\n",
-    "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
+    "clf = svm.SVC(kernel='linear', probability=True) # Linear Kernel\n",
     "\n",
     "# Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
@@ -742,20 +739,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[139  30   2]\n",
-      " [  2 228   5]\n",
-      " [  7  16 137]]\n",
-      "Precision :  [0.93918919 0.83211679 0.95138889]\n",
-      "Recall Score :  [0.8128655  0.97021277 0.85625   ]\n",
-      "Accuracy Score :  0.8904593639575972\n",
-      "F1 Score :  [0.87147335 0.89587426 0.90131579]\n"
+      "[[144  23   3]\n",
+      " [  7 231   1]\n",
+      " [  1  22 134]]\n",
+      "Precision :  [0.94736842 0.83695652 0.97101449]\n",
+      "Recall Score :  [0.84705882 0.9665272  0.85350318]\n",
+      "Accuracy Score :  0.8992932862190812\n",
+      "F1 Score :  [0.89440994 0.89708738 0.90847458]\n"
      ]
     }
    ],
@@ -835,31 +832,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO - add performance testing for test_dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "rev = input(\"Enter tweet: \")\n",
-    "\n",
-    "# remove non alpha chars, apply lowercasing\n",
-    "# your code here\n",
-    "\n",
-    "\n",
-    "# split into tokens and apply stemming\n",
-    "# your code here\n",
-    "\n",
-    "\n",
-    "# vectorize the review\n",
-    "V = vectorizer.transform([rev]).toarray()\n",
-    "\n",
-    "print(rev)\n",
-    "print(V.shape)\n",
-    "print(V)\n",
-    "\n",
-    "print(\"Review : \", clf.predict(V))\n"
+    "# TODO test_dataset"
    ]
   },
   {
@@ -883,6 +868,33 @@
     "print(\"Recall Score : \", recall_score(y_test,y_pred, average=None))\n",
     "print(\"Accuracy Score : \", accuracy_score(y_test,y_pred))\n",
     "print(\"F1 Score : \", f1_score(y_test,y_pred, average=None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to play a bit with the model that you just executed, the following code lets you introduce a new sentence that the model will try to predict the associated emotion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "rev = input(\"Enter tweet: \")\n",
+    "\n",
+    "# vectorize the review\n",
+    "V = vectorizer.transform([rev]).toarray()\n",
+    "\n",
+    "print(rev)\n",
+    "print(V.shape)\n",
+    "print(V)\n",
+    "\n",
+    "print(\"Review : \", clf.predict(V))\n"
    ]
   },
   {
