[Fix] Corrected parameter values of algorithms

--- a/src/NLP_Project2_IA.ipynb
+++ b/src/NLP_Project2_IA.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -491,20 +491,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[158   9   4]\n",
+      "[[157  10   4]\n",
       " [  4 178   2]\n",
       " [  0   0 339]]\n",
-      "Precision :  [0.97530864 0.95187166 0.9826087 ]\n",
-      "Recall Score :  [0.92397661 0.9673913  1.        ]\n",
-      "Accuracy Score :  0.9726224783861671\n",
-      "F1 Score :  [0.94894895 0.95956873 0.99122807]\n"
+      "Precision :  [0.97515528 0.94680851 0.9826087 ]\n",
+      "Recall Score :  [0.91812865 0.9673913  1.        ]\n",
+      "Accuracy Score :  0.9711815561959655\n",
+      "F1 Score :  [0.94578313 0.95698925 0.99122807]\n"
      ]
     }
    ],
@@ -534,25 +534,27 @@
    "source": [
     "## KNN\n",
     "\n",
-    "TODO - describe neural networkalgorithm"
+    "This classification algorithm uses proximity to make predictions about the grouping of data points.\n",
+    "\n",
+    "It finds the K nearest neighbours of a data point and assigns it the most common value in its neighbourhood."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[149   8  14]\n",
-      " [ 12 163   9]\n",
+      "[[147  11  13]\n",
+      " [ 17 153  14]\n",
       " [  0   0 339]]\n",
-      "Precision :  [0.92546584 0.95321637 0.93646409]\n",
-      "Recall Score :  [0.87134503 0.88586957 1.        ]\n",
-      "Accuracy Score :  0.9380403458213257\n",
-      "F1 Score :  [0.89759036 0.91830986 0.96718973]\n"
+      "Precision :  [0.89634146 0.93292683 0.92622951]\n",
+      "Recall Score :  [0.85964912 0.83152174 1.        ]\n",
+      "Accuracy Score :  0.920749279538905\n",
+      "F1 Score :  [0.87761194 0.87931034 0.96170213]\n"
      ]
     }
    ],
@@ -561,7 +563,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "# Create a KNN Classifier\n",
-    "clf = KNeighborsClassifier(n_neighbors=10,weights='distance')\n",
+    "clf = KNeighborsClassifier(n_neighbors=40,weights='distance')\n",
     "\n",
     "# Train the model using the training sets\n",
     "clf.fit(X_train, y_train)\n",
@@ -580,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance Testing"
+    "# Input Testing"
    ]
   },
   {
