[Fix] Edit on readme and review of notebook comment

--- a/src/NLP_Project2_IA.ipynb
+++ b/src/NLP_Project2_IA.ipynb
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last code block should show the first entries of the training dataset that we get from importing Emotions.csv.\n",
+    "The last code block should show the first entries of the training dataset that we got from importing Emotions.csv.\n",
     "\n",
     "The following line of code displays some details obout the dataset we just imported."
    ]
@@ -196,7 +196,7 @@
     "# Preprocessing\n",
     "\n",
     "To solve this NLP problem we will employ some stages of preprocessing on our data, namely Steaming and Tokenization.\n",
-    "We then choose between two major preprocessing algorithms that we expected may give different results: BoW (Bag of Words) and TF-IDF (Term Frequency - Inverse Document Frequency)\n"
+    "We then choose between two major preprocessing algorithms that we expect may give different results: BoW (Bag of Words) and TF-IDF (Term Frequency - Inverse Document Frequency)\n"
    ]
   },
   {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -499,12 +499,12 @@
      "output_type": "stream",
      "text": [
       "[[157  10   4]\n",
-      " [  4 178   2]\n",
+      " [  5 176   3]\n",
       " [  0   0 339]]\n",
-      "Precision :  [0.97515528 0.94680851 0.9826087 ]\n",
-      "Recall Score :  [0.91812865 0.9673913  1.        ]\n",
-      "Accuracy Score :  0.9711815561959655\n",
-      "F1 Score :  [0.94578313 0.95698925 0.99122807]\n"
+      "Precision :  [0.9691358  0.94623656 0.97976879]\n",
+      "Recall Score :  [0.91812865 0.95652174 1.        ]\n",
+      "Accuracy Score :  0.968299711815562\n",
+      "F1 Score :  [0.94294294 0.95135135 0.98978102]\n"
      ]
     }
    ],
@@ -594,20 +594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I went to the park, it wa a sunny day\n",
-      "(1, 5434)\n",
-      "[[0 0 0 ... 0 0 0]]\n",
-      "Review :  ['joy']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
